[package]
name = "mqpf"
version = "0.1.0"
edition = "2021"
description = "Path renderer for macroquad based on pathfinder code"
license = "MIT"
repository = ""

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad", rev = "b6f43bb868e776540ef8ebebd10299f1aac1c06c"}

bitflags = "1.0"
half = "1.5"
pathfinder_geometry = "0.5.1"
pathfinder_simd = "0.5.4"
image = { version = "0.23",default-features = false, features = ["png"] }